# amast

./: .clang-format  .clang-tidy  .cspellcache  .gitignore  .readthedocs.yaml  404.html  CHANGELOG.md  Doxyfile.in  LICENSE  LICENSE.md  README.md  ao.html  api.html  async.html  changes.html  contributing.html  cspell.json  design.html  event.html  flake.nix  fsm.html  genindex.html  hsm.html  index.html  installation.html  license.html  meson.build  meson_options.txt  objects.inv  onesize.html  pixi.toml  py-modindex.html  quickstart.html  ringbuf.html  search.html  searchindex.js  timer.html
.github/: FUNDING.yml
_sources/: ao.rst.txt  event.rst.txt  fsm.rst.txt  index.rst.txt  onesize.rst.txt  timer.rst.txt
apps/examples/: meson.build
apps/examples/async/: main.c
apps/examples/coro/: main.c
apps/examples/dpp/: README.md  events.h  main.c  philo.c  philo.h  table.c  table.h  timers.h
apps/examples/fork/: main.c
apps/examples/hsm/hahi/: hahi.c
apps/examples/hsm/regular/: example.c
apps/examples/hsm/submachine/calc/: example.c
apps/examples/hsm/submachine/complex/: example.c
apps/examples/ringbuf/: main.c  reader.c  state.h  writer.c
apps/examples/smokers/: README.md  main.c
apps/examples/sync/: events.h  low.c  low.h  main.c  top.c  top.h
apps/examples/watchdog/: README.md  main.c
apps/examples/workers/: main.c
apps/unity/: Makefile  files.txt.in  meson.build  unity.c
docs/: amast-app-diagram.drawio  api.rst  async.rst  conf.py.in  coro.rst  hsm.rst  index.rst  license.rst  requirements.txt  ringbuf.rst
lib/: meson.build
lib/blk/: blk.c  blk.h  test.c
lib/bt/: bt.c  bt.h  meson.build
lib/bt/test/: fallback.c  force_success.c  invert.c  log.c  log.h  parallel.c  repeat.c  retry_until_success.c  run_until_failure.c  sequence.c  test_event.c  test_event.h  test_log.h
lib/bt/test/delay/: failure.c  success.c
lib/bt/test/fallback/: failure.c  jump_second.c  success_first.c  success_second.c
lib/bt/test/parallel/: failure.c  success.c
lib/bt/test/repeat/: failure.c  success.c
lib/bt/test/retry_until_success/: infinite.c  limited.c
lib/bt/test/run_until_failure/: fail_first.c  fail_second.c
lib/bt/test/sequence/: failure_first.c  failure_second.c  jump_second.c  success.c  success_second.c
lib/common/: alignment.h  compiler.h  constants.h  macros.h  meson.build  test.c  types.h
lib/crc/: crc.c  meson.build  test.c
lib/dlist/: dlist.c  dlist.h  (+2 more)
lib/hsm/: README.rst  hsm.c  hsm.h  meson.build
lib/hsm/example/regular/: example.c
lib/hsm/example/submachine/: example.c
lib/hsm/test/: a1hsm_top_as_nca.c  common.c  common.h  history.c  hsm_top_as_nca.c  meson.build  redispatch.c  regular.c  submachine.c
lib/hsm/test/regular/: example.c  regular.c  regular.h  test.c
lib/hsm/test/submachine/: example.c  submachine.c  test.c
lib/hsm/test/submachine/basic/: test.c
lib/hsm/test/submachine/complex/: submachine.c  submachine.h  test.c
libs/: meson.build
libs/ao/: README.rst  ao.c  ao.h  meson.build  state.h
libs/ao/cooperative/: port.c  port.h
libs/ao/port/cooperative/: port.c  port.h
libs/ao/preemptive/: port.c
libs/ao/tests/: minimal.c  publish.c  stop.c
libs/async/: README.rst  async.c  async.h  meson.build  test.c
libs/bit/: bit.c  bit.h  meson.build  test.c
libs/blk/: blk.c  blk.h  meson.build  test.c
libs/bt/: meson.build
libs/bt/test/: delay.c  invert.c  test_log.c
libs/bt/tests/: count.c  delay.c  force_failure.c
libs/cobs/: cobs.c  cobs.h  meson.build
libs/cobszpe/: README.rst  cobszpe.c  cobszpe.h  meson.build  test.c
libs/common/: alignment.h  assert.c  compiler.h  constants.h  macros.h  meson.build  test.c  throttle.c  throttle.h  types.h
libs/coro/: README.rst  coro.h  meson.build  test.c
libs/crc/: crc.c  crc.h  meson.build  test.c
libs/dlist/: dlist.c  dlist.h  meson.build  test.c
libs/event/: README.rst  event.c  event.h  event_async.c  event_async.h  event_common.h  event_pool.c  event_pool.h  event_queue.c  event_queue.h  event_sync.c  event_sync.h  meson.build  test.c
libs/fsm/: README.rst  fsm.c  fsm.h  meson.build
libs/fsm/tests/: dtor.c  event_queue.c  history.c  queue.c  redispatch.c  reenter.c  spy.c
libs/hsm/: README.rst  hsm.c  hsm.h  meson.build
libs/hsm/example/regular/: example.c
libs/hsm/example/submachine/: example.c
libs/hsm/example/submachine/calc/: example.c
libs/hsm/example/submachine/complex/: example.c
libs/hsm/test/: history.c
libs/hsm/test/regular/: regular.c
libs/hsm/test/submachine/complex/: test.c
libs/hsm/tests/: README.rst  common.h  defer.c  dtor.c  event_queue.c  history.c  hsm_top_as_nca.c  queue.c  redispatch.c  reenter.c  spy.c
libs/hsm/tests/regular/: regular.c  regular.h  test.c
libs/hsm/tests/submachine/basic/: test.c
libs/hsm/tests/submachine/calc/: calc.c  calc.h  test.c
libs/hsm/tests/submachine/complex/: submachine.c  submachine.h  test.c
libs/ihsm/: DESIGN.md  ihsm.c  ihsm.h  meson.build
libs/ihsm/tests/: choice.json  choice.smc  colors.json  history.json  history.smc  initial_final.json  initial_final.smc  internal_external.json  internal_external.smc  labels.json  labels.smc  nested_state_machine.json  state_names.json
libs/onesize/: README.rst  meson.build  onesize.c  onesize.h  test.c
libs/pal/: meson.build  pal.h
libs/pal/freertos/: pal.c
libs/pal/libuv/: meson.build  pal.c
libs/pal/posix/: meson.build  pal.c
libs/pal/stubs/: meson.build  pal.c
libs/pal/zephyr/: pal.c
libs/queue/: meson.build  queue.c  queue.h  test.c
libs/ringbuf/: README.rst  meson.build  ringbuf.c  ringbuf.h  test.c
libs/slist/: meson.build  slist.c  slist.h  test.c
libs/strlib/: meson.build  strlib.c  strlib.h  test.c
libs/tests/: common.c  meson.build
libs/timer/: README.rst  meson.build  test.c  timer.c  timer.h
patterns/: index.html
src/: meson.build
subprojects/: libuv.wrap
tools/: filter_compdb.py  filter_compile_commands.py  generate_sizes_rst.py  generate_sizes_table.py
tools/unity/: Makefile  README.md  amast_config.h  files.txt.in  meson.build  unity.c
tutorial/: index.html
(+35 files in other folders)
